--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/WDserver.js --exec babel-node",
-    "start2": "babel-node src/server.js",
-    "build": "babel src -d dist",
+    "start2": "NODE_ENV=development babel-node src/server.js",
+    "build": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
     "serve": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-webpack": "webpack",
-    "production": "NODE_ENV=production node_modules/.bin/webpack -p"
+    "dev-webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,9 +26,14 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.5",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
     "nodemon": "^1.11.0",
+    "pug": "^2.0.0-beta6",
     "react-hot-loader": "^3.0.0-beta.6",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0"
