--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["react-hot-loader/babel"],
+  "env": {
+  	"production": {
+  		"ignore": [
+  			"./src/static/js/*.js"
+  		]
+  	}
+  }
 }
