--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/WDserver.js --exec babel-node",
-    "start2": "NODE_ENV=development babel-node src/server.js",
-    "build": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
-    "serve": "node dist/server.js",
+    "start2": "npm run dev-webpack && NODE_ENV=development babel-node src/server.js",
+    "build": "NODE_ENV=production babel src -d dist",
+    "productionWebpack": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
+    "serve": "npm run build && npm run productionWebpack && NODE_ENV=production node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-webpack": "webpack"
+    "dev-webpack": "webpack",
+    "pug": "pug ./src/views --out ./dist/views"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +34,7 @@
     "http-server": "^0.9.0",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta6",
+    "pug-cli": "^1.0.0-alpha6",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
