--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": [
+  	"react-hot-loader/babel",
+	  "babel-plugin-transform-react-pug"
+	],
   "env": {
   	"production": {
   		"ignore": [
