--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-react-pug": "^3.0.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
     "nodemon": "^1.11.0",
-    "pug": "^2.0.0-beta6",
-    "pug-cli": "^1.0.0-alpha6",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
