feat(eslint) add eslint with react and airbnb configs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "npm run build && npm run productionWebpack && NODE_ENV=production node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-webpack": "webpack",
-    "pug": "pug ./src/views --out ./dist/views"
+    "lint": ""
   },
   "author": "",
   "license": "ISC",
@@ -27,14 +27,26 @@
     "react-router": "^2.8.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.1",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-react-pug": "^3.0.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
+    "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
+    "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
