--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": [
-  	"react-hot-loader/babel",
-	  "babel-plugin-transform-react-pug"
-	],
   "env": {
+  	"development": {
+		  "plugins": [
+		  	"react-hot-loader/babel"
+			],
+  	},
   	"production": {
   		"ignore": [
   			"./src/static/js/*.js"
