--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "A universal React app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/WDserver.js --exec babel-node",
-    "start2": "npm run dev-webpack && babel-node src/server.js",
-    "build": "NODE_ENV=production babel src -d dist",
-    "productionWebpack": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
-    "serve": "npm run build && npm run productionWebpack && NODE_ENV=production node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-webpack": "webpack",
-    "lint": ""
+    "start": "webpack && nodemon src/server.js --exec babel-node ",
+    "build": "NODE_ENV=production babel src -d dist && webpack -p --config ./webpack.production.config.js",
+    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Evan Salzbrenner",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.16.0",
@@ -41,7 +37,6 @@
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "http-server": "^0.9.0",
     "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.0.0",
