--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react": "^6.16.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "foundation-sites": "^6.2.4",
+    "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1"
@@ -42,6 +44,7 @@
     "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
+    "scripts-loader": "^0.1.3",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
