--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
 	"extends": "airbnb",
   "rules": {
     "no-console": 0,
-    "global-require": 0
+    "global-require": 0,
+    "react/no-danger": 0
   },
   "env": {
     "browser": true
