--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -46,7 +47,6 @@
     "sass-loader": "^4.0.2",
     "scripts-loader": "^0.1.3",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0"
   }
