--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A universal React app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack && nodemon src/server.js --exec babel-node ",
+    "start": "NODE_ENV=development webpack && nodemon src/server.js --exec babel-node ",
+    "start2": "webpack --config ./tools/webpack/babel.webpack.config.js && nodemon src/server.js --exec babel-node",
     "build": "NODE_ENV=production babel src -d dist && webpack -p --config ./webpack.production.config.js",
+    "build2": "NODE_ENV=production babel src -d dist && NODE_ENV=production webpack -p --config ./tools/webpack/babel.webpack.config.js",
     "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
+    "production2": "rm -rf dist && npm run build2 && NODE_ENV=production node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Evan Salzbrenner",
@@ -22,8 +25,7 @@
     "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
-    "webpack": "^1.13.2"
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -48,6 +50,7 @@
     "scripts-loader": "^0.1.3",
     "style-loader": "^0.13.1",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0"
+    "webpack-hot-middleware": "^2.13.0",
+    "webpack": "^1.13.2"
   }
 }
