--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "sass-loader": "^4.0.2",
     "scripts-loader": "^0.1.3",
     "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0",
-    "webpack": "^1.13.2"
+    "webpack-hot-middleware": "^2.13.0"
   }
 }
