Major Update, break webpack config into smaller files, enable babel-plugin-module-resolver for avoiding extraneous paths

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,17 @@
 {
   "presets": ["es2015", "react"],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "presentation": "./src/components/presentation",
+        "page": "./src/components/page",
+        "layout": "./src/components/layout",
+        "data": "./src/data",
+        "routes": "./src/routes"
+      }
+    }]
+  ],
   "env": {
   	"development": {
 		  "plugins": [
