--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,13 @@
     "global-require": 0,
     "react/no-danger": 0
   },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "extensions": [".js", ".jsx"]
+      }
+    }
+  },
   "env": {
     "browser": true
   },
