--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "A universal React app",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack && nodemon src/server.js --exec babel-node ",
-    "start2": "webpack --config ./tools/webpack/babel.webpack.config.js && nodemon src/server.js --exec babel-node",
-    "build": "NODE_ENV=production babel src -d dist && webpack -p --config ./webpack.production.config.js",
-    "build2": "NODE_ENV=production babel src -d dist && NODE_ENV=production webpack -p --config ./tools/webpack/babel.webpack.config.js",
-    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
-    "production2": "rm -rf dist && npm run build2 && NODE_ENV=production node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --config ./tools/webpack.config.js && nodemon src/server.js --exec babel-node",
+    "build": "NODE_ENV=production webpack -p --config ./tools/webpack.config.js && NODE_ENV=production babel src -d dist",
+    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js"
   },
   "author": "Evan Salzbrenner",
   "license": "ISC",
@@ -30,14 +26,15 @@
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "babel-loader": "^6.2.5",
-    "babel-plugin-transform-react-pug": "^3.0.0",
+    "babel-plugin-module-resolver": "^2.3.0",
     "babel-preset-react-hmre": "^1.1.1",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-import-resolver-babel-module": "^2.2.1",
     "eslint-loader": "^1.6.0",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.4.1",
@@ -46,6 +43,7 @@
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "require-dir": "^0.3.1",
     "sass-loader": "^4.0.2",
     "scripts-loader": "^0.1.3",
     "style-loader": "^0.13.1",
