--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-uni",
+  "name": "react-universal-boilerplate",
   "version": "1.0.0",
   "description": "A universal React app",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js"
   },
   "author": "Evan Salzbrenner",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
