--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "rules": {
     "no-console": 0,
     "global-require": 0,
-    "react/no-danger": 0
+    "react/no-danger": 0,
+    "import/no-extraneous-dependencies": [2, { "devDependencies": true }]
   },
   "settings": {
     "import/resolver": {
