--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "transform-loader": "^0.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -39,13 +40,16 @@
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "gsap": "^1.19.0",
     "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
+    "pixi.js": "^4.2.2",
     "postcss-loader": "^1.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "require-dir": "^0.3.1",
     "sass-loader": "^4.0.2",
     "scripts-loader": "^0.1.3",
+    "scrollmagic": "^2.0.5",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
