--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-motion": "^0.4.5",
     "react-router": "^2.8.1",
-    "transform-loader": "^0.2.3",
-    "webpack": "^1.13.3"
+    "transform-loader": "^0.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.1",
@@ -53,6 +51,7 @@
     "scripts-loader": "^0.1.3",
     "scrollmagic": "^2.0.5",
     "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0"
   }
