--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "compression": "^1.6.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "foundation-sites": "^6.2.4",
@@ -39,6 +40,7 @@
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "mocha": "^3.2.0",
     "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.0.0",
