--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "author": "Evan Salzbrenner",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "compression": "^1.6.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
@@ -27,6 +24,10 @@
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "babel-loader": "^6.2.5",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-plugin-module-resolver": "^2.3.0",
     "babel-preset-react-hmre": "^1.1.1",
     "copy-webpack-plugin": "^3.0.1",
