--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "~2.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-ga": "^2.1.2",
     "react-router": "^2.8.1",
     "transform-loader": "^0.2.3"
   },
