--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-ga": "^2.1.2",
+    "react-helmet": "^3.2.3",
     "react-router": "^2.8.1",
     "transform-loader": "^0.2.3"
   },
