--- a/.modernizrrc
+++ b/.modernizrrc
@@ -1,8 +1,10 @@
 {
+  "minify": true,
   "options": [
     "setClasses"
   ],
   "feature-detects": [
-    "test/touchevents"
+    "test/touchevents",
+    "test/emoji"
   ]
 }
