--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A universal React app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config ./tools/webpack.config.js && nodemon src/server.js --exec babel-node",
+    "start": "webpack --config ./tools/webpack.config.js && nodemon --ignore src/ src/server.js --exec babel-node",
     "build": "NODE_ENV=production webpack -p --config ./tools/webpack.config.js && NODE_ENV=production babel src -d dist",
-    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js"
+    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
+    "deploy": "npm run production && git checkout -b deploy"
   },
   "author": "Evan Salzbrenner",
   "license": "MIT",
