--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack --config ./tools/webpack.config.js && nodemon --ignore src/ src/server.js --exec babel-node",
     "build": "NODE_ENV=production webpack -p --config ./tools/webpack.config.js && NODE_ENV=production babel src -d dist",
     "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
-    "deploy": "npm run build && git checkout -b deploy && sed -i.bak 's/dist/#dist/g' .gitignore && rm .gitignore.bak && git add . && git commit -m 'deploy' && git push -f heroku deploy:master && git checkout -- . && git checkout master && git branch -D deploy"
+    "deploy": "npm run build && git checkout -b deploy && sed -i.bak 's/dist/#dist/g' .gitignore && rm .gitignore.bak && git add . && git commit -m 'deploy' && git push -f heroku deploy:master && git checkout -- . && git checkout master && git branch -D deploy",
+    "test": "karma start karma.config.js || true"
   },
   "author": "Evan Salzbrenner",
   "license": "MIT",
@@ -35,8 +36,11 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "browser-sync": "^2.18.5",
+    "cheerio": "^0.22.0",
     "copy-webpack-plugin": "^3.0.1",
+    "core-js": "^2.4.1",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.7.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-babel-module": "^2.2.1",
@@ -47,12 +51,22 @@
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gsap": "^1.19.0",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "modernizr": "^3.3.1",
     "modernizr-loader": "^1.0.0",
     "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.0.0",
+    "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "require-dir": "^0.3.1",
     "sass-loader": "^4.0.2",
