--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --config ./tools/webpack.config.js && nodemon --ignore src/ src/server.js --exec babel-node",
-    "build": "NODE_ENV=production webpack -p --config ./tools/webpack.config.js && NODE_ENV=production babel src -d dist",
-    "production": "rm -rf dist && npm run build && NODE_ENV=production node dist/server.js",
+    "build": "rm -rf dist && NODE_ENV=production webpack -p --config ./tools/webpack.config.js && NODE_ENV=production babel src -d dist",
+    "production": "npm run build && NODE_ENV=production node dist/server.js",
     "deploy": "npm run build && git checkout -b deploy && sed -i.bak 's/dist/#dist/g' .gitignore && rm .gitignore.bak && git add . && git commit -m 'deploy' && git push -f heroku deploy:master && git checkout -- . && git checkout master && git branch -D deploy",
     "test": "karma start karma.config.js || true"
   },
