--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
     "scripts-loader": "^0.1.3",
     "scrollmagic": "^2.0.5",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.7.0",
+    "stylelint-config-concentric": "^1.0.6",
+    "stylelint-config-standard": "^15.0.1",
+    "stylelint-selector-bem-pattern": "^1.0.0",
+    "stylelint-webpack-plugin": "^0.4.2",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0"
