--- a/.babelrc
+++ b/.babelrc
@@ -20,14 +20,9 @@
     }]
   ],
   "env": {
-  	"development": {
-		  "plugins": [
-		  	"react-hot-loader/babel"
-			],
-  	},
   	"production": {
   		"ignore": [
-  			"./src/static/js/*.js"
+  			"./src/static/compiled/*.js"
   		]
   	}
   }
