--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "modernizr-loader": "^1.0.0",
     "node-sass": "^3.10.1",
     "nodemon": "^1.11.0",
+    "pixi.js": "^4.3.0",
     "postcss-loader": "^1.0.0",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
