--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.3.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^3.2.3",
+    "react-motion": "^0.4.7",
     "react-router": "^2.8.1",
     "sitemap": "^1.8.2",
     "transform-loader": "^0.2.3"
